fixed small bug on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -702,7 +702,7 @@ align-items: center;
   .magnifyingGlass{
     font-size: 32px;
     margin-left: 5px;
-    margin-top: 15px !important;
+    margin-top: 21px !important;
   }
 }
 }
